2005-11-14  Anders Carlsson  <andersca@mac.com>

        Reviewed by Eric.

        - fix <http://bugzilla.opendarwin.org/show_bug.cgi?id=5737>
        Implement DOM3 namespace functions.

        * khtml/ecma/kjs_dom.cpp:
        (KJS::DOMNodeProtoFunc::callAsFunction):
        * khtml/ecma/kjs_dom.h:
        (KJS::DOMNode::):
        Add JavaScript wrappers for new Node namespace functions.

        * khtml/xml/dom_nodeimpl.cpp:
        (DOM::NodeImpl::isDefaultNamespace):
        (DOM::NodeImpl::lookupPrefix):
        (DOM::NodeImpl::lookupNamespaceURI):
        (DOM::NodeImpl::lookupNamespacePrefix):
        (DOM::NodeImpl::getAncestorElement):
        Implement Node namespace functions.

        * khtml/xml/dom_nodeimpl.h:
        Add definitions for Node namespace functions.

        * kwq/DOM.mm:
        (-[DOMNode isDefaultNamespace:]):
        (-[DOMNode lookupPrefix:]):
        (-[DOMNode lookupNamespaceURI:]):
        Add objective C wrappers for new Node namespace functions.

2005-11-15  Vicki Murley  <vicki@apple.com>

        Reviewed by Tim O.
 
	Improve this loop.  We'd get an infinite loop in the old code if we came across a part with no renderer, such as a frame whose src is an image.

        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]):

2005-11-15  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        - fix for <rdar://problem/4341948> REGRESSION(TOT/GLENDALE): Safari won't tab between input/textarea elements if a select element is present

        * kwq/KWQComboBox.mm: (-[KWQPopUpButton canBecomeKeyView]): removed check for tabsToAllControls() since we now always allow tabbing to select elements
        * kwq/KWQListBox.mm: (-[KWQTableView canBecomeKeyView]): ditto.

2005-11-15  Alexey Proskuryakov  <ap@nypop.com>
        
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=5717>
        REGRESSION: [WebCoreBridge _visiblePositionForPoint:(0,x)] crashes
        
        Reviewed by justin
